# fs_statistics

./: CMakeLists.txt
src/: CMakeLists.txt  MainWindow.qml  MainWindowModel.cpp  MainWindowModel.h  StatisticsModel.cpp  StatisticsModel.h  file_system_scanner.cpp  file_system_scanner.h  formatters.cpp  formatters.h  main.cpp
